--- a/tox.ini
+++ b/tox.ini
@@ -35,6 +35,25 @@ commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
     sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
 
+
+[testenv:removeme]
+deps =
+    {[testenv]deps}
+    pytest-cov
+    neuron-nightly
+    morphio
+setenv =
+    NEURON_INIT_MPI=0
+    PYTHONPATH={toxinidir}
+    COVERAGE_FILE = .coverage.unit
+allowlist_externals =
+    {toxinidir}/ci/build_ndcore.sh
+    sh
+commands =
+    {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
+    sh -c ". {toxworkdir}/.envfile && pytest -x {posargs:tests/unit/test_core_config.py}"
+
+
 [testenv:unit-ngv-mpi]
 deps =
     {[testenv]deps}
@@ -84,16 +103,16 @@ commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
     pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/integration-e2e}
 
-[testenv:removeme]
-# Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
-passenv = *
-setenv =
-    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
-    HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
-    NEURON_INIT_MPI=1
-commands =
-    python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
-    pytest -s -x --durations=5 --durations-min=15 --basetemp={toxinidir}/removeme {posargs:tests/integration-e2e/test_reports.py}
+; [testenv:removeme]
+; # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
+; passenv = *
+; setenv =
+;     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+;     HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
+;     NEURON_INIT_MPI=1
+; commands =
+;     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
+;     pytest -s -x --durations=5 --durations-min=15 --basetemp={toxinidir}/removeme {posargs:tests/integration-e2e/test_reports.py}
 
 [testenv:scientific]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
