--- a/tox.ini
+++ b/tox.ini
@@ -84,10 +84,6 @@ commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
     pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/integration-e2e}
 
-
-
-
-
 [testenv:removeme]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
 passenv = *
@@ -97,7 +93,7 @@ setenv =
     NEURON_INIT_MPI=1
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
-    pytest -s -x --durations=5 --durations-min=15 --basetemp={toxinidir}/removeme {posargs:tests/integration-e2e/test_reports.py}
+    pytest -s -x --forked --durations=5 --durations-min=15 --basetemp={toxinidir}/removeme {posargs:tests/scientific/test_lfp.py}
 
 [testenv:scientific]
 # Please you need to spack load neurodamus-models model=neocortex +coreneuron or use an equivalent spack virtual env
