--- a/.github/workflows/simulation_test.yml
+++ b/.github/workflows/simulation_test.yml
@@ -157,16 +157,11 @@ jobs:
         cache-name: cache-neuron
       with:
         path: nrn
-        # todo revert after https://github.com/neuronsimulator/nrn/pull/3507 is merged
-        # key: ${{ matrix.os }}-neuron-${{ env.NEURON_BRANCH }}-${{ env.NEURON_COMMIT_ID }}-py${{ matrix.python-version }}
-        key: ${{ matrix.os }}-neuron-katta/compartment_sets_corenrn-${{ env.NEURON_COMMIT_ID }}-py${{ matrix.python-version }}
+        key: ${{ matrix.os }}-neuron-${{ env.NEURON_BRANCH }}-${{ env.NEURON_COMMIT_ID }}-py${{ matrix.python-version }}
 
 
     - name: Install NEURON
       if: steps.cache-neuron.outputs.cache-hit != 'true'
-      # todo remove after https://github.com/neuronsimulator/nrn/pull/3507 is merged
-      env:
-        NEURON_BRANCH: 'katta/compartment_sets_corenrn'
       run: |
         export SONATAREPORT_DIR=$(pwd)/libsonatareport/build/install
         if [[ ${{ env.NEURON_BRANCH }} == 'master' ]]; then
@@ -286,7 +281,6 @@ jobs:
       
     - name: integration-e2e
       run: |
-        echo $NEURON_BRANCH
         tox -e integration-e2e
 
     - name: scientific
