--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,7 @@ setenv =
     NEURON_INIT_MPI=0
     PYTHONPATH={toxinidir}
     COVERAGE_FILE = .coverage.unit
+    PYTEST_DEBUG_TEMPROOT={env:PYTEST_DEBUG_TEMPROOT}
 allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
     sh
