--- a/.github/workflows/simulation_test.yml
+++ b/.github/workflows/simulation_test.yml
@@ -191,19 +191,25 @@ jobs:
       run: |
         MPICC=mpicc pip install --no-binary=mpi4py mpi4py
 
-    - name: Build h5py with the local hdf5
+    - name: Build h5py with local HDF5
       run: |
         if [[ "${{matrix.os}}" == *"macOS"* ]]; then
-          export HDF5_INCLUDEDIR=$(brew --prefix hdf5-mpi)/include
-          export HDF5_LIBDIR=$(brew --prefix hdf5-mpi)/lib
-          # uninstall any cached h5py so pip rebuilds it
-          pip uninstall -y h5py || true
+            # Homebrew HDF5-MPI paths
+            export HDF5_INCLUDEDIR=$(brew --prefix hdf5-mpi)/include
+            export HDF5_LIBDIR=$(brew --prefix hdf5-mpi)/lib
+            # Ensure dynamic loader picks up correct HDF5 at runtime
+            export DYLD_LIBRARY_PATH=$HDF5_LIBDIR:$DYLD_LIBRARY_PATH
+            # Uninstall any pre-existing h5py
+            pip uninstall -y h5py || true
         else
-          export HDF5_INCLUDEDIR=/usr/include/hdf5/mpich
-          export HDF5_LIBDIR=/usr/lib/x86_64-linux-gnu/hdf5/mpich
+            export HDF5_INCLUDEDIR=/usr/include/hdf5/mpich
+            export HDF5_LIBDIR=/usr/lib/x86_64-linux-gnu/hdf5/mpich
         fi
-        # Upgrade setuptools again, to avoid build error from `project.license`
+
+        # Upgrade pip & setuptools to avoid build errors
         python -m pip install --upgrade pip setuptools
+
+        # Build h5py from source on macOS, use cached wheel on Linux
         CC="mpicc" HDF5_MPI="ON" HDF5_INCLUDEDIR=$HDF5_INCLUDEDIR HDF5_LIBDIR=$HDF5_LIBDIR \
           pip install --no-cache-dir --no-binary=h5py h5py --no-build-isolation
 
