fix h5py because THEY (not be) broke master

--- a/tox.ini
+++ b/tox.ini
@@ -26,7 +26,7 @@ deps =
     morphio
 setenv =
     NEURON_INIT_MPI=0
-    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    PYTHONPATH={toxinidir}
     COVERAGE_FILE = .coverage.unit
     PYTEST_DEBUG_TEMPROOT={env:PYTEST_DEBUG_TEMPROOT}
 allowlist_externals =
@@ -43,7 +43,7 @@ deps =
     morphio
     -r tests/unit-mpi/requirements.txt
 setenv =
-    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    PYTHONPATH={toxinidir}
     NEURON_INIT_MPI=1
     RDMAV_FORK_SAFE=1
     COVERAGE_FILE = .coverage.unit-ngv-mpi
@@ -61,7 +61,7 @@ deps =
     neuron-nightly
     -r tests/unit-mpi/requirements.txt
 setenv =
-    PYTHONPATH={toxinidir}:{env:PYTHONPATH}
+    PYTHONPATH={toxinidir}
     NEURON_INIT_MPI=1
     RDMAV_FORK_SAFE=1
     COVERAGE_FILE = .coverage.unit-mpi
