dump_cellstate for astrocytes
small tweaks

--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ setenv =
     NEURON_INIT_MPI=1
     RDMAV_FORK_SAFE=1
     COVERAGE_FILE = .coverage.unit-ngv-mpi
+    PYTEST_DEBUG_TEMPROOT={env:PYTEST_DEBUG_TEMPROOT}
 allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
     sh
