--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -3,4 +3,7 @@ pytest==7.4
 pytest-forked==1.6
 scipy~=1.10
 pandas
-h5py<=3.14.0
+# 3.15.0 breaks compatibility with older macOS versions:
+# https://github.com/h5py/h5py/blob/master/docs/whatsnew/3.15.rst
+# Thus, we avoid that wheel
+h5py!=3.15.0
