--- a/tox.ini
+++ b/tox.ini
@@ -66,6 +66,7 @@ setenv =
     NEURON_INIT_MPI=1
     RDMAV_FORK_SAFE=1
     COVERAGE_FILE = .coverage.unit-mpi
+    PYTEST_DEBUG_TEMPROOT={env:PYTEST_DEBUG_TEMPROOT}
 allowlist_externals =
     {toxinidir}/ci/build_ndcore.sh
     sh
@@ -80,6 +81,7 @@ setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
     HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
     NEURON_INIT_MPI=1
+    LIBSONATA_ZERO_BASED_GIDS=1
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
     pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/integration-e2e}
@@ -91,6 +93,7 @@ setenv =
     PYTHONPATH={toxinidir}:{env:PYTHONPATH}
     HOC_LIBRARY_PATH={toxinidir}/neurodamus/data/hoc:{env:HOC_LIBRARY_PATH}
     NEURON_INIT_MPI=1
+    LIBSONATA_ZERO_BASED_GIDS=1
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
     pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/scientific}
