--- a/.github/workflows/simulation_test.yml
+++ b/.github/workflows/simulation_test.yml
@@ -49,6 +49,10 @@ jobs:
             python-version: '3.11.10'
           - os: ubuntu-22.04
             python-version: '3.12.6'
+          - os: ubuntu-22.04
+            python-version: '3.13'
+          - os: ubuntu-22.04
+            python-version: '3.14'
           # macOS is only run with Python 3.12.6 due to github action cache size limits
           - os: macOS-15
             python-version: '3.12.6'
@@ -56,7 +60,7 @@ jobs:
 
     steps:
     - name: Setup Python
-      uses: actions/setup-python@v5
+      uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
 
