--- a/.github/workflows/simulation_test.yml
+++ b/.github/workflows/simulation_test.yml
@@ -44,16 +44,16 @@ jobs:
       matrix:
         include:
           - os: ubuntu-22.04
-            python-version: '3.10.15'
+            python-version: '3.10'
           - os: ubuntu-22.04
-            python-version: '3.11.10'
+            python-version: '3.11'
           - os: ubuntu-22.04
-            python-version: '3.12.6'
+            python-version: '3.12'
           - os: ubuntu-22.04
             python-version: '3.13'
-          # macOS is only run with Python 3.12.6 due to github action cache size limits
+          # test macOS with one python version due to the cache size limits
           - os: macOS-15
-            python-version: '3.12.6'
+            python-version: '3.12'
       fail-fast: false
 
     steps:
@@ -61,6 +61,10 @@ jobs:
       uses: actions/setup-python@v6
       with:
         python-version: ${{ matrix.python-version }}
+
+    - name: Get Python patch version
+      id: pyver
+      run: echo "version=$(python -c 'import platform; print(platform.python_version())')" >> $GITHUB_OUTPUT
 
     - name: Checkout neurodamus repository
       uses: actions/checkout@v4
@@ -113,7 +117,7 @@ jobs:
         cache-name: cache-venv
       with:
         path: venv
-        key: ${{ matrix.os }}-libsonata-${{ env.LIBSONATA_BRANCH }}-py${{ matrix.python-version }}
+        key: ${{ matrix.os }}-libsonata-${{ env.LIBSONATA_BRANCH }}-py${{ steps.pyver.outputs.version }}
 
     - name: Upgrade pip and install base Python packages
       if: steps.cache-venv.outputs.cache-hit != 'true'
@@ -138,7 +142,7 @@ jobs:
         cache-name: cache-libsonatareport
       with:
         path: libsonatareport
-        key: ${{ matrix.os }}-libsonatareport-${{ env.LIBSONATA_REPORT_BRANCH }}-py${{ matrix.python-version }}
+        key: ${{ matrix.os }}-libsonatareport-${{ env.LIBSONATA_REPORT_BRANCH }}-py${{ steps.pyver.outputs.version }}
 
     - name: Install libsonatareport
       if: steps.cache-libsonatareport.outputs.cache-hit != 'true'
@@ -157,7 +161,7 @@ jobs:
         cache-name: cache-neuron
       with:
         path: nrn
-        key: ${{ matrix.os }}-neuron-${{ env.NEURON_BRANCH }}-${{ env.NEURON_COMMIT_ID }}-py${{ matrix.python-version }}
+        key: ${{ matrix.os }}-neuron-${{ env.NEURON_BRANCH }}-${{ env.NEURON_COMMIT_ID }}-py${{ steps.pyver.outputs.version }}
 
 
     - name: Install NEURON
