--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ allowlist_externals =
     sh
 commands =
     {toxinidir}/ci/build_ndcore.sh {toxinidir}/neurodamus/data {toxworkdir}
-    sh -c ". {toxworkdir}/.envfile && pytest -x --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
+    sh -c ". {toxworkdir}/.envfile && pytest --cov=neurodamus --cov-report=term-missing --forked {posargs:tests/unit}"
 
 [testenv:unit-ngv-mpi]
 deps =
