--- a/tox.ini
+++ b/tox.ini
@@ -94,7 +94,7 @@ setenv =
     NEURON_INIT_MPI=1
 commands =
     python -c "import os; print(os.environ.get('HOC_LIBRARY_PATH', ''))"
-    pytest -s -x --durations=5 --durations-min=15 {posargs:tests/scientific}
+    pytest -s -x --forked --durations=5 --durations-min=15 {posargs:tests/scientific}
 
 [testenv:lint]
 skip_install = True
