--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dynamic = ["version"]
 dependencies = [
     "h5py",
     "docopt-ng",
-    "libsonata",
+    "libsonata>=0.1.34",
     "psutil",
     "packaging",
     "scipy"
